[package]
name = "bitcoin-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# By default, std is activated. Deactivating it for RISC-V compilation
# Allowing alloc for structures allocated on the heap.
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
lto = true
panic = 'abort'